--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/dev/apidocs/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="B:/Java/Eclipse/eclipse/lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
